--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "vite": "^5.4.1"
   },
   "dependencies": {
+    "@studio-freight/lenis": "^1.0.42",
     "animate.css": "^4.1.1",
     "autoprefixer": "^10.4.19",
+    "gsap": "^3.12.5",
     "jquery": "^3.7.1",
     "lazysizes": "^5.3.2",
-    "swiper": "^11.1.1",
+    "swiper": "^11.1.12",
     "wow.js": "^1.2.2"
   }
 }
