--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gsap": "^3.12.5",
     "jquery": "^3.7.1",
     "lazysizes": "^5.3.2",
+    "node-telegram-bot-api": "^0.66.0",
     "swiper": "^11.1.12",
     "wow.js": "^1.2.2"
   }
